# newsdom-api

./: .coderabbit.yaml  .dockerignore  .gitignore  .markdownlint-cli2.jsonc  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.nvidia  Dockerfile.test  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.circleci/: config.yml
.clusterfuzzlite/: Dockerfile  build.sh
.config/opencode/skills/remediation-patterns/: fix-mypy-type-narrowing-and-subprocess-strings.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/actions/upload-pages-artifact/: action.yml
.github/workflows/: build-ci-image.yml  clusterfuzzlite.yml  codeql.yml  container-image.yml  dependency-review.yml  gh-pages.yml  quality-gate.yml  release.yml  scorecards.yml  tests.yml
api-reference/: index.html
development/: index.html
docs/adr/: 0001-defer-openssf-best-practices-enrollment.md  0001-openssf-best-practices-badge.md  0002-single-maintainer-review-exception.md  README.md
docs/agents/: README.md
docs/coderabbit/: review-commands.md
docs/engineering/: acceptance-criteria.md  canonical-docs.md  execution-policy.md  harness-engineering.md  review-policy.md  runtime-data-policy.md  skills-subagents-mcp.md
docs/operations/: deploy-runbook.md
docs/plans/: 2026-04-08-git-flow-design.md  2026-04-08-git-flow.md  2026-04-08-newsdom-design.md  2026-04-08-newsdom-implementation.md  2026-04-08-quality-gate-design.md  2026-04-08-quality-gate.md  2026-04-08-security-gates-design.md  2026-04-08-security-gates.md  2026-04-10-code-scanning-hardening-and-manual-screenshots.md  2026-04-10-main-stable-sync-design.md  2026-04-10-main-stable-sync.md  2026-04-10-truth-source-alignment-design.md  2026-04-10-truth-source-alignment.md  2026-04-11-reviewer-capacity-ruleset-alignment-design.md  2026-04-11-reviewer-capacity-ruleset-alignment.md  2026-04-11-reviewer-capacity-ruleset-before.json  2026-04-11-v0-1-1-superseding-release-design.md  2026-04-11-v0-1-1-superseding-release.md  2026-04-23-ocr-accuracy-program-followthrough-design.md  2026-04-23-ocr-accuracy-program-followthrough.md  2026-04-23-ocr-issue-program-and-local-accuracy-design.md  2026-04-23-ocr-issue-program-and-local-accuracy-plan.md
docs/security/: api-security-checklist.md
docs/workflow/: git-flow.md  one-day-delivery-plan.md  pr-continuity.md
fuzzers/: dom_builder_fuzzer.py
fuzzers/corpus/dom_builder_fuzzer/: mineru_sample.json
installation/: index.html
manual/: api-reference.md  development.md  index.md  installation.md  usage.md
manual/workflow/: ocr-accuracy-evidence.md
scripts/: __init__.py
scripts/release/: __init__.py  build_release_manifest.py  export_release_attestations.py
search/: search_index.json
src/newsdom_api/: __init__.py  dom_builder.py  equivalence.py  errors.py  main.py  mineru_runner.py  schemas.py  service.py  synthetic.py
src/newsdom_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_adr_docs.py  test_benchmark_ocr.py  test_changelog.py  test_circleci_config.py  test_coderabbit_config.py  test_committed_fixture.py  test_dependabot.py  test_derive_private_baseline.py  test_docker_delivery.py  test_docstrings.py  test_dom_builder.py  test_engineering_canonical_docs.py  test_equivalence.py  test_fixture_equivalence.py  test_fuzzing_integration.py  test_health.py  test_manual_docs.py  test_markdownlint_policy.py  test_mineru_runner.py  test_mineru_runner_paths.py  test_parse_endpoint.py  test_parse_endpoint_success.py  test_private_baseline.py  test_project_metadata.py  test_readme.py  test_release_pipeline.py  test_repository_governance.py  test_schemas.py  test_security_policy.py  test_service.py  test_synthetic_fixture.py  test_synthetic_paths.py  test_truth_source_alignment.py  test_workflow_runtime_env.py  test_workflow_security.py  test_workflows.py
tests/fixtures/: README.md  mineru_multi_page_model.json  mineru_multi_page_sample.json  mineru_sample.json  private_page_baseline.json  redacted_benchmark_results.json  synthetic_reference.json
tools/: benchmark_ocr.py  derive_private_baseline.py
usage/: index.html
