[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsdom-api"
version = "0.1.0"
description = "DOM-style parser API for scanned Japanese newspaper PDFs"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [{name = "Seongho Bae"}]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.9,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "reportlab>=4.2,<5.0",
  "Pillow>=11.0,<13.0",
  "pypdf>=5.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10.0",
  "pytest-cov>=5.0,<8.0",
  "httpx>=0.28,<1.0",
  "pyyaml>=6.0,<7.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.6,<9.7",
]
nvidia = [
  "mineru[pipeline]==3.0.9 ; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
fuzz = [
  "atheris==3.0.0 ; platform_system == 'Linux' and python_version >= '3.11'",
  "pyinstaller==6.16.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires MinerU CLI and model cache"
]

[tool.coverage.run]
source = ["src/newsdom_api"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
